nivasa-macros/tests/trybuild/middleware_invalid_target.rs
#[nivasa_macros::middleware]
fn not_a_struct() {}

fn main() {}
